[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.55.0",
    "fastapi>=0.115.14",
    "openai>=1.92.3",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "uvicorn>=0.34.3",
]
